--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ src/firebase-credentials.json
 src/config/firebaseAdmin.ts
 backend/firebase-credentials.json
 firebase-credentials.json
+src/firebase/config.js
