--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,14 +2,27 @@
   "name": "photopin-frontend",
   "version": "1.0.0",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@googlemaps/js-api-loader": "^2.0.2",
-    "@types/react-router-dom": "^5.3.3",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
+    "@react-google-maps/api": "^2.20.7",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
-    "firebase": "^10.14.1",
+    "firebase": "^12.6.0",
     "lucide-react": "^0.553.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.9.6"
+    "react-dropzone": "^14.3.8",
+    "react-router-dom": "^6.30.2",
+    "workbox-core": "^7.3.0",
+    "workbox-expiration": "^7.3.0",
+    "workbox-precaching": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0"
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
